--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -124,7 +124,7 @@
                     <span class="relativetime" title="{{utcTimestamp roomBecameIdleAWhileDate}}"></span>
                     {{/unless}}
                 </td></tr>
-                <tr><td>longIdleDurationHours</td><td>{{longIdleDuration}} hours</td></tr>
+                <tr><td>longIdleDurationHours</td><td>{{longIdleDurationHours}} hours</td></tr>
                 <tr><td>roomBecameIdleHoursAgo</td><td>{{{boolean roomBecameIdleHoursAgo}}}
                     {{#unless roomBecameIdleHoursAgo}}
                     <span class="relativetime" title="{{utcTimestamp roomBecameIdleHoursDate}}"></span>
