--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,40 +18,41 @@
     <section>
         <aside>
             <h2>Election Info</h2>
+            {{#with election}}
             <table>
-                <tr><td>Last updated</td><td>{{utcTimestamp election/updated}} <span class="relativetime" title="{{utcTimestamp election/updated}}"></span></td></tr>
-                <tr><td>Site name</td><td>{{election/siteName}}</td></tr>
+                <tr><td>Last updated</td><td>{{utcTimestamp updated}} <span class="relativetime" title="{{utcTimestamp updated}}"></span></td></tr>
+                <tr><td>Site name</td><td>{{siteName}}</td></tr>
                 <tr><td>Host name</td><td>{{{url siteUrl siteHostname}}}</td></tr>
                 <tr><td>API slug</td><td>{{apiSlug}}</td></tr>
-                <tr><td>Title</td><td>{{{url election/electionUrl election/title}}}</td></tr>
-                <tr><td>Election ID</td><td>{{election/electionNum}}</td></tr>
+                <tr><td>Title</td><td>{{{url electionUrl title}}}</td></tr>
+                <tr><td>Election ID</td><td>{{electionNum}}</td></tr>
                 <tr><td>Chat room</td>
-                    {{#if election/chatUrl}}
-                    <td>{{{url election/chatUrl election/chatUrl}}}</td>
+                    {{#if chatUrl}}
+                    <td>{{{url chatUrl chatUrl}}}</td>
                     {{else}}
                     <td></td>
                     {{/if}}
                 </tr>
-                <tr><td>Positions</td><td>{{election/numPositions}}</td></tr>
-                <tr><td>Rep. to vote</td><td>{{election/repVote}}</td></tr>
-                <tr><td>Rep. to nominate</td><td>{{election/repNominate}}</td></tr>
-                <tr><td>Current phase</td><td>{{election/phase}}</td></tr>
-                <tr><td>Nomination date</td><td>{{utcTimestamp election/dateNomination}} <span class="relativetime" title="{{utcTimestamp election/dateNomination}}"></span></td></tr>
+                <tr><td>Positions</td><td>{{numPositions}}</td></tr>
+                <tr><td>Rep. to vote</td><td>{{repVote}}</td></tr>
+                <tr><td>Rep. to nominate</td><td>{{repNominate}}</td></tr>
+                <tr><td>Current phase</td><td>{{phase}}</td></tr>
+                <tr><td>Nomination date</td><td>{{utcTimestamp dateNomination}} <span class="relativetime" title="{{utcTimestamp dateNomination}}"></span></td></tr>
                 <tr><td>Primary date</td>
-                    {{#if election/datePrimary}}
-                    <td>{{utcTimestamp election/datePrimary}} <span class="relativetime" title="{{utcTimestamp election/datePrimary}}"></span></td>
+                    {{#if datePrimary}}
+                    <td>{{utcTimestamp datePrimary}} <span class="relativetime" title="{{utcTimestamp datePrimary}}"></span></td>
                     {{else}}
                     <td></td>
                     {{/if}}
                 </tr>
-                <tr><td>Election date</td><td>{{utcTimestamp election/dateElection}} <span class="relativetime" title="{{utcTimestamp election/dateElection}}"></span></td></tr>
-                <tr><td>End date</td><td>{{utcTimestamp election/dateEnded}} <span class="relativetime" title="{{utcTimestamp election/dateEnded}}"></span></td></tr>
-                <tr><td>Opavote URL</td><td>{{{url election/opavoteUrl election/opavoteUrl}}}</td></tr>
-                <tr><td>Voter stats</td><td>{{election/statVoters}}</td></tr>
+                <tr><td>Election date</td><td>{{utcTimestamp dateElection}} <span class="relativetime" title="{{utcTimestamp dateElection}}"></span></td></tr>
+                <tr><td>End date</td><td>{{utcTimestamp dateEnded}} <span class="relativetime" title="{{utcTimestamp dateEnded}}"></span></td></tr>
+                <tr><td>Opavote URL</td><td>{{{url opavoteUrl opavoteUrl}}}</td></tr>
+                <tr><td>Voter stats</td><td>{{statVoters}}</td></tr>
                 <tr><td>Candidates</td>
-                    {{#if election/arrNominees.length}}
+                    {{#if arrNominees.length}}
                     <td><ul class="list">
-                        {{#each election/arrNominees}}
+                        {{#each arrNominees}}
                         <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a>; <a href="{{this.nominationLink}}">nomination</a>; score {{this.userScore}}; {{this.userYears}}</li>
                         {{/each}}
                     </ul></td>
@@ -60,9 +61,9 @@
                     {{/if}}
                 </tr>
                 <tr><td>Winners</td>
-                    {{#if election/arrWinners.length}}
+                    {{#if arrWinners.length}}
                     <td><ul class="list">
-                        {{#each election/arrWinners}}
+                        {{#each arrWinners}}
                         <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a></li>
                         {{/each}}
                     </ul></td>
@@ -72,12 +73,13 @@
                 </tr>
                 <tr><td>Badges</td><td>
                     <ul class="list">
-                        {{#each election/electionBadges}}
+                        {{#each electionBadges}}
                         <li class="item"><a href="{{@root/data/siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}} [{{this.badge_id}}]</a></li>
                         {{/each}}
                     </ul>
                 </td></tr>
             </table>
+            {{/with}}
         </aside>
     </section>
 
@@ -86,6 +88,7 @@
             <h2>Bot Config</h2>
             {{#with botconfig}}
             <table>
+                <tr><td>scriptHostname</td><td>{{scriptHostname}}</td></tr>
                 <tr><td>isMuted</td><td>
                     {{{boolean isMuted}}}
                     {{#if isMuted}}
@@ -100,6 +103,7 @@
                 <tr><td>funMode</td><td>{{{boolean funMode}}}</td></tr>
                 <tr><td>debug</td><td>{{{boolean debug}}}</td></tr>
                 <tr><td>verbose</td><td>{{{boolean verbose}}}</td></tr>
+                <tr><td>keepAlive</td><td>{{keepAlive}}</td></tr>
                 {{#with flags}}
                 <tr><td>flags.saidElectionEndingSoon</td><td>{{{boolean saidElectionEndingSoon}}}</td></tr>
                 <tr><td>flags.announcedWinners</td><td>{{{boolean announcedWinners}}}</td></tr>
@@ -145,6 +149,6 @@
 
 </main>
 
-{{/with}}
+ <meta http-equiv="refresh" content="{{autoRefreshInterval}}" />
 
- <meta http-equiv="refresh" content="{{data/autoRefreshInterval}}" />
+{{/with}}
