--- a/views/config.handlebars
+++ b/views/config.handlebars
@@ -1,5 +1,7 @@
 <h1>{{{heading}}}</h1>
 
+<nav><span class="navitem">{{{url "/" "Home"}}}</span> > <span class="navitem">Config</span></nav>
+
 <form method="post">
 
     {{{data/statusText}}}
