--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,6 @@
                 <tr><td>Last updated</td><td>{{utcTimestamp updated}} <span class="relativetime" title="{{utcTimestamp updated}}"></span></td></tr>
                 <tr><td>Site name</td><td>{{siteName}}</td></tr>
                 <tr><td>Host name</td><td>{{{url siteUrl @root/data/siteHostname}}}</td></tr>
-                <tr><td>API slug</td><td>{{@root/data/apiSlug}}</td></tr>
                 <tr><td>Title</td><td>{{{url electionUrl title}}}</td></tr>
                 <tr><td>Election ID</td><td>{{electionNum}}</td></tr>
                 <tr><td>Chat room</td>
@@ -100,7 +99,7 @@
                 <tr><td>funMode</td><td>{{{boolean funMode}}}</td></tr>
                 <tr><td>debug</td><td>{{{boolean debug}}}</td></tr>
                 <tr><td>verbose</td><td>{{{boolean verbose}}}</td></tr>
-                <tr><td>keepAlive</td><td>{{boolean keepAlive}}</td></tr>
+                <tr><td>keepAlive</td><td>{{{boolean keepAlive}}}</td></tr>
                 {{#with flags}}
                 <tr><td>flags.saidElectionEndingSoon</td><td>{{{boolean saidElectionEndingSoon}}}</td></tr>
                 <tr><td>flags.announcedWinners</td><td>{{{boolean announcedWinners}}}</td></tr>
