--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,7 @@
 
 <blockquote>
     <p>I am <strong><a href="https://github.com/samliew/se-electionbot">ElectionBot</a></strong>, a chatbot that can answer commonly-asked questions about elections for sites on the Stack Exchange network.</p>
-    <p>This instance is listening to <strong>{{{url chatRoomUrl}}}</strong>.</p>
-    <p>Current time {{utcTimestamp utcNow}}; Last updated {{utcTimestamp election/updated}} <span class="relativetime" title="{{utcTimestamp election/updated}}"></span></p>
+    <p>This instance is listening to <strong>{{{url chatRoomUrl}}}</strong>. The current time is {{utcTimestamp utcNow}}.</p>
 </blockquote>
 
 <main class="dashboard">
@@ -70,7 +69,10 @@
                 <tr><td>Badges</td><td>
                     <ul class="list">
                         {{#each electionBadges}}
-                        <li class="item"><a href="{{@root/data/siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}}</a> [{{this.badge_id}}]</li>
+                        <li class="item">
+                            <a href="{{@root/data/siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}}</a> [{{this.badge_id}}]
+                            {{#ifCond @root/data/election/isStackOverflow '&&' this.required}}<em>(required)</em>{{/if}}
+                        </li>
                         {{/each}}
                     </ul>
                 </td></tr>
@@ -115,7 +117,10 @@
             <table>
                 <tr><td>lastActivityTime</td><td>{{utcTimestamp lastActivityTime}} <span class="relativetime" title="{{utcTimestamp lastActivityTime}}"></span></td></tr>
                 <tr><td>lastMessageTime</td><td>{{utcTimestamp lastMessageTime}} <span class="relativetime" title="{{utcTimestamp lastMessageTime}}"></span></td></tr>
-                <tr><td>lastBotMessage</td><td>{{lastBotMessage}}</td></tr>
+                <tr><td>lastBotMessage</td><td>
+                    <pre>{{lastBotMessage}}</pre>
+                    <div class="mt20">{{{lastBotMessageHtml}}}</div>
+                </td></tr>
                 <tr><td>activityCounter</td><td>{{activityCounter}}</td></tr>
                 <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
                 <tr><td>roomReachedMinimumActivityCount</td><td>{{{boolean roomReachedMinimumActivityCount}}}</td></tr>
