--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -79,7 +79,7 @@ pre {
     background: #e6e6e6;
     padding: 3px 6px;
 
-    white-space: pre-line;
+    white-space: pre-wrap;
     word-break: break-word;
 }
 td:empty:before,
