Remove time from dashboard

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 
 <blockquote>
     <p>I am <strong><a href="https://github.com/samliew/se-electionbot">ElectionBot</a></strong>, a chatbot that can answer commonly-asked questions about elections for sites on the Stack Exchange network.</p>
-    <p>This instance is listening to <strong>{{{url chatRoomUrl}}}</strong>. The current time is {{utcTimestamp utcNow}}.</p>
+    <p>This instance is listening to <strong>{{{url chatRoomUrl}}}</strong>.</p>
 </blockquote>
 
 <main class="dashboard">
