--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -75,7 +75,8 @@ pre {
     max-width: 550px;
     margin: 0;
     overflow: auto;
-    font-size: 0.8em;
+    font-size: 0.9em;
+    font-family: monospace;
     background: #e6e6e6;
     padding: 3px 6px;
 
