--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -83,7 +83,7 @@
                             <tr>
                                 <td><a href="{{@root/data/siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}}</a></td>
                                 <td>{{this.badge_id}}</td>
-                                <th>{{this.type}}</th>
+                                <td>{{this.type}}</td>
                                 {{#if @root/data/election/isStackOverflow}}<td>{{{yesno this.required}}}</td>{{/if}}
                             </tr>
                             {{/each}}
