Set up this way because we want an empty element

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,13 @@
                 <tr><td>Positions</td><td>{{numPositions}}</td></tr>
                 <tr><td>Rep. to vote</td><td>{{repVote}}</td></tr>
                 <tr><td>Rep. to nominate</td><td>{{repNominate}}</td></tr>
-                <tr><td>Current phase</td><td><strong>{{phase}}</strong></td></tr>
+                <tr><td>Current phase</td>
+                    {{#if phase}}
+                    <td><strong>{{phase}}</strong></td>
+                    {{else}}
+                    <td></td>
+                    {{/if}}
+                </tr>
                 <tr><td>Nomination date</td><td>{{utcTimestamp dateNomination}} <span class="relativetime" title="{{utcTimestamp dateNomination}}"></span></td></tr>
                 <tr><td>Primary date</td>
                     {{#if datePrimary}}
