--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -75,7 +75,7 @@
                 <tr>
                     <td>Badges</td>
                     <td>
-                        <table>
+                        <table class="nested">
                             <thead>
                                 <tr>
                                     <th>Link</th>
