--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
                 <tr><td>Site</td><td>{{siteName}}</td></tr>
                 <tr><td>Hostname</td><td>{{{url siteUrl @root/data/siteHostname}}}</td></tr>
                 <tr><td>Election Title</td><td>{{title}}</td></tr>
-                <tr><td>Election URL</td><td>{{{url electionUrl electionUrl}}}</td></tr>
+                <tr><td>Election URL</td><td>{{{url electionUrl}}}</td></tr>
                 <tr><td>Election Chat</td>
                     {{#if chatUrl}}
                     <td>{{{url chatUrl}}}</td>
